--- a/DockerfileHeroku
+++ b/DockerfileHeroku
@@ -44,6 +44,7 @@ RUN npm install
 RUN apk add nginx openrc wget net-tools
 
 # copy conf files
-RUN mkdir /etc/nginx/conf.d/
+RUN mkdir -p /etc/nginx/conf.d/
+RUN rm /etc/nginx/conf.d/*
 COPY nginx/heroku/nginx.conf /etc/nginx/nginx.conf
 COPY nginx/heroku/default.conf /etc/nginx/conf.d/default.conf
