--- a/nginx/heroku/default.conf
+++ b/nginx/heroku/default.conf
@@ -1,6 +1,6 @@
 # Upstream Server(s)
 upstream client_upstream {
-  server localhost:3000;
+  server localhost:3000;  # note the usage of 'localhost'
 }
 
 upstream server_upstream {
@@ -11,7 +11,7 @@ upstream server_upstream {
 server {
     # Defaults
     listen @PORT default_server;
-    server_name WEBSITE_NAME;
+    server_name blog.danielnazarian.com;
     server_tokens off;
     client_max_body_size 10M;
 
@@ -30,11 +30,19 @@ server {
     # Client static files
     location /_next/static/ {
         proxy_pass http://client_upstream;
+        proxy_set_header X-Url-Scheme $scheme;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Host $http_host;
+        proxy_redirect off;
     }
 
     # Server static files
     location ~* ^/(static|static-debug|media|media-debug)/ {
         proxy_pass http://server_upstream;
+        proxy_set_header X-Url-Scheme $scheme;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Host $http_host;
+        proxy_redirect off;
     }
 
     # Server proxy
@@ -50,7 +58,7 @@ server {
         proxy_pass http://server_upstream;
         proxy_set_header X-Url-Scheme $scheme;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header Host WEBSITE_NAME;  # for heroku this must be exact for some reason
+        proxy_set_header Host blog.danielnazarian.com;  # for heroku this must be exact for some reason
         proxy_redirect off;
     }
 
