--- a/DockerfileHeroku
+++ b/DockerfileHeroku
@@ -18,7 +18,7 @@ ENV PYTHONUNBUFFERED 1
 RUN apk add --no-cache --virtual .build-deps ca-certificates gcc postgresql-dev linux-headers musl-dev libffi-dev jpeg-dev zlib-dev python3-dev
 
 WORKDIR /app/server
-COPY ../Pipfile ../Pipfile.lock /app/server/
+COPY Pipfile Pipfile.lock /app/server/
 RUN pip install --upgrade pip
 RUN pip install pipenv
 RUN pipenv install --system --deploy --ignore-pipfile
@@ -45,6 +45,5 @@ RUN apk add nginx openrc wget net-tools
 
 # copy conf files
 RUN mkdir -p /etc/nginx/conf.d/
-RUN rm /etc/nginx/conf.d/*
 COPY nginx/heroku/nginx.conf /etc/nginx/nginx.conf
 COPY nginx/heroku/default.conf /etc/nginx/conf.d/default.conf
